# nyacc

./: .dir-locals.el  .gitignore  .guix-channel  ChangeLog  ChangeLog-nyacc  HACKING  INSTALL  Makefile.in  NEWS  README  README.nyacc  configure  guix.scm
doc/: Makefile.in  cdata.html  cdata.info  cdata.md  cdata.texi  nyacc-c99-hg.texi  nyacc-c99-ug.html  nyacc-c99-ug.info  nyacc-c99-ug.md  nyacc-c99-ug.texi  nyacc-fh-ug.html  nyacc-fh-ug.info  nyacc-fh-ug.md  nyacc-fh-ug.texi  nyacc-hg.texi  nyacc-munge-ug.texi  nyacc-ug.html  nyacc-ug.info  nyacc-ug.md  nyacc-ug.texi  pull-texi.scm
doc/nyacc/: COPYING.DOC  Makefile.in  Makefile.nyacc  ffi-help.html  ffi-help.info  ffi-help.texi  howicode.texi  memodefs.texi  nyacc-c99-ug.html  nyacc-c99-ug.info  nyacc-c99-ug.texi  nyacc-fh-ug.html  nyacc-fh-ug.info  nyacc-fh-ug.texi  nyacc-fh.html  nyacc-fh.info  nyacc-fh.texi  nyacc-hg.texi  nyacc-ug.html  nyacc-ug.info  nyacc-ug.texi  nyacc.texi  pull-texi.scm
doc/nyacc/lang/: Makefile.nyacc  c99-ug.texi  demo.texi  lang-hg.texi  memodefs.texi
doc/nyacc/lang/c99/: Makefile.nyacc  c99-hg.texi  c99-ug.texi  munge-ug.texi  munge.texi
etc/: README  configure.ac  guild.in  guile.m4  nyacc-guix.scm  nyacc-package.scm  nyacc.m4
examples/: Makefile.in  Makefile.nyacc  env.sh  language
examples/bytestructures/: README
examples/ffi/: Makefile.nyacc  NOTES  README  TMPL.ffi  bug55395.ffi  bug57949.ffi  bug59374.ffi  bug60410.ffi  bug62120.ffi  bug62730.ffi  bug63604.ffi  bug65594.ffi  cairo-rn.ffi  cairo.ffi  cairo.scm  cairo.scm-mac  cblas.ffi  clang.ffi  dbus.ffi  eina.ffi  epoll.ffi  fontconfig.ffi  freetype2.ffi  fuse.ffi  gdbm.ffi  gdk2.ffi  gettext-po.ffi  gintrospect.ffi  gio.ffi  gio.scm  girepository.ffi  glib.ffi  glib.scm  glugl.ffi  gobject.ffi  gobject.scm  gtk2+.ffi  gtk2.ffi  gtkglext1.ffi  gumbo.ffi  (+45 more)
examples/ffi-bs/: README  TMPL.ffi  bug55395.ffi  bug57949.ffi  bug59374.ffi  bug60410.ffi  bug62120.ffi  bug62730.ffi  bug64667.ffi  cairo.ffi  cblas.ffi  clang.ffi  dbus.ffi  eina.ffi  epoll.ffi  fuse.ffi  gdbm.ffi  gdk2.ffi  gettext-po.ffi  gintrospect.ffi  gio.ffi  glib.ffi  glugl.ffi  gobject.ffi  gtk2.ffi  gtkglext1.ffi  gumbo.ffi  hack1.ffi  hack2.ffi  hdf5.ffi  htslib.ffi  libelf.ffi  libevent.ffi  libgit2.ffi  liblinear.ffi  librsvg.ffi  librsync.ffi  libssh.ffi  liburing.ffi  libyaml.ffi  (+19 more)
examples/fhbe/: bytestructures.scm  fhbe-bytestructures.scm
examples/language/calc/: README  calc.scm  full.txt  parser.scm  spec.scm
examples/language/calc/mach.d/: calc-full-act.scm  calc-stmt-act.scm
examples/language/javascript/: spec.scm
examples/language/nx-javascript/: compile-tree-il.scm  mach.scm  parser.scm  pprint.scm  spec.scm  xlib.scm
examples/language/nx-javascript/mach.d/: ia-js-act.scm  ia-js-tab.scm  js-act.scm  js-tab.scm
examples/language/nx-matlab/: spec.scm
examples/language/nx-mlang/: compile-tree-il.scm  mach.gen  mach.scm  parser.scm  pprint.scm  spec.scm  xlib.scm
examples/language/nx-mlang/mach.d/: mlang-act.scm  mlang-tab.scm  mlangia-act.scm  mlangia-tab.scm
examples/language/nx-octave/: spec.scm
examples/language/nx-tcl/: compile-tree-il.scm  mach.scm  parser.scm  pprint.scm  spec.scm  xlib.scm
examples/language/nx-tcl/mach.d/: expr-act.scm  expr-tab.scm
examples/language/nx-tsh/: compile-tree-il.scm  mach.gen  mach.scm  parser.scm  spec.scm  xlib.scm
examples/language/nx-tsh/mach.d/: tsh-file-act.scm  tsh-file-tab.scm  tsh-stmt-act.scm  tsh-stmt-tab.scm
examples/nyacc/: ChangeLog  README  Tcpp.scm  Tlangc.scm  Tlangjs.scm  Tlangm.scm  Tlangmo.scm  Twith.scm  cxp  env.sh  js-spec.scm  jsdev.scm  jslib.scm
examples/nyacc/impl/python/: act.py  lex.py  lexer.py  nytopy  parse.py
examples/nyacc/lang/: README  nagel.texi  nx-devel.texi  nx-disp.scm  nx-format.scm  nx-lib.scm  nx-load.scm  nx-printf.scm  nx-repl.scm  nx-util.scm  readnum.scm  t-util.scm  util.scm
examples/nyacc/lang/TMPL/: compile-tree-il.scm  mach.gen  make-new-nx  nxtmpl  spec.scm  xlib.scm
examples/nyacc/lang/c/: README  Tcpp.scm  Tlangc.scm  actions.scm  cpp.scm  cppact.scm  cppgen.scm  cpptab.scm  ex1.c  gram.y  inc.h  lang.txt  parser.scm  pbody.scm  pgen.scm  tables.scm  util.scm
examples/nyacc/lang/c99/: README  Tcexpr.scm  Tclang.scm  Tcpp.scm  Tlangc.scm  Tmach.scm  Tpprint.scm  Umach.scm  actions.scm  arch-info.scm  cairo-demo.scm  compile-ffi-helper  cpp.scm  cppact.scm  cppgen.scm  cpptab.scm  cxp  demo-cairo.scm  digest.scm  doit.scm  env.sh  ex1.c  expract.scm  exprtab.scm  ffi-help-rt.scm  ffi-help.info  ffi-help.scm  ffi-help.texi  fh-01.test  gram.y  gtkdemo.scm  hello.c  lang.txt  misc.scm  mkjit.scm  parser.scm  pbody.scm  pgen.scm  pgen.scm-HS  pprint.scm  (+7 more)
examples/nyacc/lang/calc/: README  Tcalc.scm  Umach.scm  calc  calc.scm  calc1-act.scm  calc1-tab.scm  calc1.out  calc1.scm  calc1.y  calc2.scm  calc3  compiler.scm  mach.gen  mach.scm  parser.scm  (+2 more)
examples/scripts/: compile-ffi.scm
examples/system/: dbus.scm  ffi-help-rt.scm
module/: Makefile.in  Makefile.nyacc  README  smatch.scm
module/ffi/: ffi-help-rt.scm
module/nyacc/: BUGS  ChangeLog  Dprune0.scm  Dprune1.scm  README  bison.scm  compat18.scm  export.scm  import.scm  lalr.scm  lalr2.scm  lex.scm  newp.scm  parse.scm  util.scm  version.scm  xmlio.scm
module/nyacc/foreign/: arch-info.scm  cdata.scm  show_march.c
module/nyacc/lang/: arch-info.scm  bv-help.scm  cdata.scm  cdata.texi  cdemo.scm  ctest.scm  sx-match.scm  sx-util.scm  util.scm
module/scripts/: compile-ffi.scm
module/system/: ffi-help-rt.scm
module/system/foreign/: arch-info.scm  cdata-utils.scm  cdata.scm  cdata.texi  cdemo.scm  ctest.scm  libffi.scm
test-suite/: Makefile.in  env.sh
test-suite/nyacc/: Makefile.in  Makefile.nyacc  calc.scm  lalr-01.test  lex-01.test  t-lex.scm  tmpl.test
test-suite/nyacc/foreign/: arch-info-01.test  cdata-01.test  cdata-02.test  checkarch  chkarch.c
test-suite/nyacc/lang/: Makefile.in  Makefile.nyacc  nx-printf.test  sx-match.test  sx-util.test  util.test
test-suite/system/foreign/: cdata-01.test  cdata-02.test
test-suite/test-suite/: lib.scm  lib18.scm
(+529 files in other folders)
